--- a/inventory.ini
+++ b/inventory.ini
@@ -8,4 +8,5 @@ backend.devopshub.shop
 frontend.devopshub.shop
 
 [all:vars]
-ansible_password=DevOps321 #this variable is for all hosts
+ansible_user=ec2-user
+ansible_password=DevOps321
