--- a/inventory.ini
+++ b/inventory.ini
@@ -8,5 +8,4 @@ backend.devopshub.shop
 frontend.devopshub.shop
 
 [all:vars]
-ansible_user=ec2-user
-ansible_password=DevOps321
+ansible_password=DevOps321 # this variable is for all hosts
