--- a/inventory.ini
+++ b/inventory.ini
@@ -8,4 +8,4 @@ backend.devopshub.shop
 frontend.devopshub.shop
 
 [all:vars]
-ansible_password=DevOps321 # this variable is for all hosts
+ansible_password=DevOps321 
