--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -45,7 +45,7 @@
 - name: install python mysql dependencies
   ansible.builtin.pip:
     name:
-    - PYMYSQL # to connect MySQL DB from Ansible.
+    - PYMYSQL # to connect MySQL DB from Ansible
     - Cryptography
     executable: pip3.9 # pip3.11 if python version is 3.11
 
