--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -25,12 +25,15 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
+# if there is change in configuration only, then you need to restart nginx
 - name: copy backend conf
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
+  notify:
+  - restart nginx
 
-- name: restart nginx
-  ansible.builtin.service:
-    name: nginx
-    state: restarted
+# - name: restart nginx
+#   ansible.builtin.service:
+#     name: nginx
+#     state: restarted
