--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -2,3 +2,5 @@ login_user: root
 login_host: db.devopshub.shop
 login_password: ExpenseApp@1
 DB_HOST: db.devopshub.shop
+app_location: /app
+component: backend
