--- a/roles/db/tasks/main.yaml
+++ b/roles/db/tasks/main.yaml
@@ -1,74 +1,35 @@
-  - name: disable default nodejs
-    ansible.builtin.command: dnf module disable nodejs -y
-  
-  - name: enable nodejs:20
-    ansible.builtin.command: dnf module enable nodejs:20 -y
- 
-  - name: install nodejs
-    ansible.builtin.dnf: # only works for redhat family
-      name: "{{ item }}"
-      state: installed
-    loop:
-    - nodejs
-    - mysql
-  
-  - name: create expense user
-    ansible.builtin.user:
-      name: expense
- 
-  - name: create app directory
-    ansible.builtin.file:
-      path: /app
-      state: directory
-  
-  - name: download backend code
-    ansible.builtin.get_url:
-      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-      dest: /tmp/backend.zip
-  
-  - name: unzip backend code
-    ansible.builtin.unarchive:
-      src: /tmp/backend.zip # default checks in ansible server
-      dest: /app
-      remote_src: yes
-  
-  - name: install npm dependencies
-    ansible.builtin.command: npm install
-    args:
-      chdir: /app
-  
-  - name: copy backend service
-    ansible.builtin.template:
-      src: backend.service.j2
-      dest: /etc/systemd/system/backend.service
-  
-  - name: install python mysql dependencies
-    ansible.builtin.pip:
-      name:
-      - PYMYSQL # to connect MySQL DB from Ansible
-      - Cryptography
-      executable: pip3.9 # pip3.11 if python version is 3.11
-  
-  - name: import data into mysql
-    community.mysql.mysql_db:
-      login_user: root
-      login_password: "{{ login_password }}"
-      login_host: "{{ login_host }}"
-      target: /app/schema/backend.sql
-      state: import
-      name: all
-  
-  - name: daemon reload
-    ansible.builtin.systemd_service:
-      daemon_reload: true
- 
-  - name: start and enable backend service
-    ansible.builtin.service:
-      name: backend
-      state: started
-      enabled: yes
-  
-  - name: restart backend service
-    ansible.builtin.service:
-      name: backend
-      state: restarted
+- name: Install MySQL Server
+  ansible.builtin.dnf:
+    name: mysql-server
+    state: latest
+
+- name: Start and Enable MySQL server
+  ansible.builtin.service:
+    name: mysqld
+    state: started
+    enabled: yes
+
+- name: install python mysql dependencies
+  ansible.builtin.pip:
+    name:
+    - pyMYSQL
+    - cryptography
+    executable: pip3.9 # pip3.11 if python version is 3.11
+
+# check password is already setup or not 
+- name: check DB connection
+  community.mysql.mysql_info:
+    login_user: root
+    login_password: "{{ mysql_root_password }}"
+    login_host: "{{ login_host }}"
+    filter: version
+  ignore_errors: yes
+  register: mysql_connection_output
+
+- name: print output
+  ansible.builtin.debug:
+    msg: "Output: {{ mysql_connection_output }}"
+
+- name: setup root password
+  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+  when: mysql_connection_output.failed is true # don't give {{ }} in when condition
