--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -56,16 +56,12 @@
     daemon_reload: true
 
 - name: start and enable backend service
+  tags:
+  - deployment
   ansible.builtin.service:
     name: backend
     state: started
     enabled: yes
-
-- name: restart backend service
-  ansible.builtin.service:
-    name: backend
-    state: restarted
-
 
 
 
