--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -2,7 +2,7 @@ plugin: amazon.aws.aws_ec2
 regions:
 - us-east-1
 keyed_groups:
-- key: tags['name']
+- key: tags['Name']
   prefix: ''
   parent_group: ''
 
